# stingy

./: Cargo.toml  README.md  TODO.md  build.rs
git-hooks/: pre-commit
src/: commands.rs  database.rs  fallible_print.rs  main.rs  output.rs  table.rs
src/commands/: accounts.rs  import.rs  info.rs  query.rs  reset.rs  tags.rs  undo.rs
src/database/: model.rs  sqlite_impl.rs
src/database/sql/migrations/: 001-initial-schema.sql  002-undo.sql  003-remove-transactions-cascade-transactions-tags.sql  004-add-id-to-accounts.sql  005-transaction-id-tag-rules-have-precedence.sql  006-account-bank.sql
src/database/sql/queries/: by_month.sql  by_tag.sql  by_time.sql  credits_debits.sql
src/database/sql/test/: test_data.sql
src/output/: chart.rs  format.rs  table.rs
