[package]
name = "stingy"
version = "0.0.4"
edition = "2021"
build = "build.rs"

[build-dependencies]
vergen = { version = "8.0.0", features = ["git", "gitcl"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
csv = "1.2.1"
dirs = "5.0.0"
pager = "0.16.1"
regex = "1.7.3"
sqlite = "0.30.4"
struct-field-names-as-array = "0.2.0"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
